
#All exported headers
nobase_include_HEADERS=opx/sai_acl_rule_utils.h opx/sai_hash_api_utils.h \
opx/sai_l3_mem.h opx/sai_qos_api_utils.h opx/sai_stp_api.h \
opx/sai_common_acl.h opx/sai_hostif_api.h opx/sai_mirror_api.h opx/sai_qos_mem.h \
opx/sai_tunnel_api_utils.h opx/sai_common_infra.h opx/sai_hostif_main.h opx/sai_modules_init.h \
opx/sai_samplepacket_api.h opx/sai_udf_api_utils.h opx/sai_fdb_main.h \
opx/sai_l3_api_utils.h opx/sai_port_main.h opx/sai_shell_common.h \
opx/sai_l3_next_hop_group_utl.h opx/sai_lag_debug.h opx/sai_qos_debug.h \
opx/sai_stp_debug.h opx/sai_vlan_debug.h \
opx/sai_bridge_main.h
